--- a/CoreNLPSentiment.csproj
+++ b/CoreNLPSentiment.csproj
@@ -161,11 +161,20 @@
     </Compile>
     <Compile Include="CoreNLPSentiment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsForm_CoreNLPSentiment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForm_CoreNLPSentiment.Designer.cs">
+      <DependentUpon>SettingsForm_CoreNLPSentiment.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingsForm_CoreNLPSentiment.resx">
+      <DependentUpon>SettingsForm_CoreNLPSentiment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -184,44 +193,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y  "$(TargetPath)" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\"
-xcopy /y  "$(TargetDir)ejml-0.23.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.AWT.WinForms.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Beans.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Charsets.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Cldrdata.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Corba.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Core.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Jdbc.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Localedata.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Management.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Media.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Misc.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Naming.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Nashorn.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Remoting.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Security.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.SwingAWT.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Text.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Tools.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.Util.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.API.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.Bind.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.Crypto.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.Parse.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.Transform.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.WebServices.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.OpenJDK.XML.XPath.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.Runtime.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)IKVM.Runtime.JNI.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)javax.json.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)joda-time.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)jollyday.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)protobuf.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)slf4j-api.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)slf4j-simple.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)stanford-corenlp-3.9.1.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y  "$(TargetDir)xom.dll" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\IKVM_8_1_5717\"
-xcopy /y /e "$(ProjectDir)stanford-corenlp-full-2018-02-27" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\Dependencies\stanford-corenlp-full-2018-02-27\"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y  "$(TargetPath)" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
